@@ -8,6 +8,8 @@
 - Fix pedantic build by cleaning up out123 source, also now really showing
   the encoding list in --longhelp instead of possibly, again, writing junk
   from memory in there.
+- Not linking libmpg123 against libltdl anymore (bug 215).
+- Update MSVC++ ports a bit to make them work again.
 
 1.22.0
 ---
